--- a/themes/landscape/layout/_partial/after-footer.ejs
+++ b/themes/landscape/layout/_partial/after-footer.ejs
@@ -22,3 +22,14 @@
 <% } %>
 
 <%- js('js/script') %>
+
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?eda8970bda28788bc88a29c3667cbc2d";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(hm, s);
+  })();
+</script>
+
